examples/retail-platform/k8s/overlays/prod/ingress/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-1.1.0
  name: nginx
  namespace: retail-prod
spec:
  gatewayClassName: nginx
  listeners:
  - hostname: shop.example.internal
    name: shop-example-internal-http
    port: 80
    protocol: HTTP
