examples/retail-platform/k8s/overlays/prod/ingress/ingress-basic-path.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: basic-path-ingress
  namespace: default
spec:
  parentRefs:
    - name: envoy-gateway
  hostnames:
    - example.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /app
      backendRefs:
        - name: web-app
          port: 80
