examples/retail-platform/k8s/overlays/prod/ingress/ingress-canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "20"
spec:
  rules:
    - host: canary.example.com
      http:
        paths:
          - path: /beta
            pathType: Prefix
            backend:
              service:
                name: beta-service
                port:
                  number: 80
