examples/retail-platform/k8s/overlays/prod/ingress/ingress-gzip-compression.gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gzip-compression-ingress
  namespace: default
spec:
  parentRefs:
    - name: envoy-gateway
  hostnames:
    - assets.example.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /assets
      backendRefs:
        - name: static-service
          port: 80
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: gzip-compression-ingress-compression
  namespace: default
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: gzip-compression-ingress
  compression:
    - type: Gzip
      gzip: {}
      minContentLength: 1024
