examples/retail-platform/k8s/overlays/prod/ingress/ingress-gzip-compression.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gzip-compression-ingress
  namespace: default
spec:
  parentRefs:
    - name: envoy-gateway
  hostnames:
    - assets.example.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /assets
      backendRefs:
        - name: static-service
          port: 80
