examples/retail-platform/k8s/overlays/prod/ingress/ingress-proxy-timeout.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: proxy-timeout-ingress
  namespace: default
spec:
  parentRefs:
    - name: envoy-gateway
  hostnames:
    - timeout.example.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /slow
      timeouts:
        request: 90s
      backendRefs:
        - name: slow-service
          port: 8080
