examples/retail-platform/k8s/overlays/prod/ingress/ingress-rate-limiting.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-1.1.0
  name: nginx
  namespace: default
spec:
  gatewayClassName: nginx
  listeners:
  - hostname: rate-limit.example.com
    name: rate-limit-example-com-http
    port: 80
    protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-1.1.0
  name: rate-limited-ingress-rate-limit-example-com
  namespace: default
spec:
  hostnames:
  - rate-limit.example.com
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - name: api-service
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /api
    name: rule-0
status:
  parents: []
