examples/retail-platform/k8s/overlays/prod/ingress/ingress-rewrite-target.gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rewrite-target-ingress
  namespace: default
spec:
  parentRefs:
    - name: envoy-gateway
  hostnames:
    - rewrite.example.com
  rules:
    - matches:
        - path:
            type: RegularExpression
            value: /docs(/|$)(.*)
      backendRefs:
        - name: docs-service
          port: 80
