examples/retail-platform/k8s/overlays/prod/ingress/ingress-rewrite-target.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rewrite-target-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: rewrite.example.com
      http:
        paths:
          - path: /docs(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: docs-service
                port:
                  number: 80
