examples/retail-platform/k8s/overlays/prod/ingress/ingress-ssl-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ssl-redirect-ingress-https-redirect
  namespace: default
spec:
  parentRefs:
    - name: envoy-gateway
      sectionName: http
  hostnames:
    - redirect.example.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ssl-redirect-ingress
  namespace: default
spec:
  parentRefs:
    - name: envoy-gateway
      sectionName: https
  hostnames:
    - redirect.example.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: storefront
          port: 80
