examples/retail-platform/k8s/overlays/prod/ingress/ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-ingress
  namespace: secure
spec:
  tls:
    - hosts:
        - secure.example.com
      secretName: secure-example-tls
  rules:
    - host: secure.example.com
      http:
        paths:
          - path: /secure
            pathType: Prefix
            backend:
              service:
                name: secure-service
                port:
                  number: 443
