examples/retail-platform/k8s/overlays/prod/ingress/ingress-underscores-headers.gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-1.1.0
  name: nginx
  namespace: default
spec:
  gatewayClassName: nginx
  listeners:
  - hostname: underscores.example.com
    name: underscores-example-com-http
    port: 80
    protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-1.1.0
  name: underscores-headers-ingress-underscores-example-com
  namespace: default
spec:
  hostnames:
  - underscores.example.com
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - name: header-service
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /headers
    name: rule-0
status:
  parents: []
