examples/retail-platform/k8s/overlays/prod/ingress/ingress-underscores-headers.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: underscores-headers-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/server-snippet: |
      more_set_headers "X_CUSTOM_HEADER: yes";
spec:
  rules:
    - host: underscores.example.com
      http:
        paths:
          - path: /headers
            pathType: Prefix
            backend:
              service:
                name: header-service
                port:
                  number: 80
